--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'org.jsoup:jsoup:1.7.2'
+    compile 'com.google.guava:guava:12.0'
 }
